# threaded-signals

./: CMakeLists.txt  readme.md
examples/simple/: CMakeLists.txt  main.cpp
include/: signal.hpp  thread_pool.hpp
